--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -4,7 +4,10 @@
 
 {% block page_specific_css_class %}homepage{% endblock page_specific_css_class %}
 
-{% block page_subtitle %}predicting RNA 3D motifs in sequences{% endblock page_subtitle %}
+{% block page_subtitle %}
+predicting RNA 3D motifs in sequences
+<a href="http://rna.bgsu.edu/main/jar3d-tutorial/" class="btn btn-success pull-right">Tutorial</a>
+{% endblock page_subtitle %}
 
 {% block page_content %}
     <div class="row">
