Change the order of js loading

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -3,9 +3,7 @@
 {% block page_specific_css_class %}results-done{% endblock page_specific_css_class %}
 
 {% block custom_css %}
-<link rel="stylesheet" href="{{ STATIC_URL }}js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 <script src="http://rna.bgsu.edu/img/jmol/jmol.js"></script>
-<script src="http://rna.bgsu.edu/img/jmolTools/jquery.jmolTools.js"></script>
 {% endblock custom_css %}
 
 {% block page_subtitle %}
@@ -88,7 +86,7 @@
 {% block page_specific_js %}
     {{ block.super }}
     <script src="{{ STATIC_URL }}js/jquery.tablesorter.min.js"></script>
-    <script src="{{ STATIC_URL }}js/fancybox/jquery.fancybox.pack.js"></script>
+    <script src="http://rna.bgsu.edu/img/jmolTools/jquery.jmolTools.js"></script>
 
     <script>
     $(document).ready(function() {
@@ -107,7 +105,12 @@
     function appletLoaded (){
         $('.jmolInline').first().jmolToggle();
     }
+    </script>
 
+    <script src="{{ STATIC_URL }}js/fancybox/jquery.fancybox.pack.js"></script>
+    <link rel="stylesheet" href="{{ STATIC_URL }}js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+
+    <script>
     // position jmol
     (function(){
         var reference = $('table').first();
