--- a/Templates/JAR3Doutput/base.html
+++ b/Templates/JAR3Doutput/base.html
@@ -29,7 +29,7 @@
             <div class="page-header">
                 <h1>
                     {% block page_header %}
-                    <a href="{% url home %}">JAR3D</a>
+                    <a href="{% url 'home' %}">JAR3D</a>
                     {% endblock page_header %}
                     <small>{% block page_subtitle %}{% endblock page_subtitle %}</small>
                 </h1>
