Remove query type and reword loop information.
Query type is not something a user should see, it is debugging information for
us and thus has been commented out. The number of loops information is actually
the number of extracted loops, not the number of loops, and I reword this to
make it clear.

--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -17,16 +17,17 @@
 
 {% block page_content %}
 
-<div id='query-interpretation'>
-    <h4>Query interpretation</h4>
+<div id='query-interpretation' class='row'>
+  <div class="span8">
+    <h3>Query interpretation</h3>
     <dl>
-        <dt>Query type</dt>
-        <dd>{{query_info.query_type}}</dd>
+        <!--<dt>Query type</dt>-->
+        <!--<dd>{{query_info.query_type}}</dd>-->
 
         <dt>Number of sequences</dt>
         <dd>{{num.seq}}</dd>
 
-        <dt>Number of loops</dt>
+        <dt>Number of extracted loops</dt>
         <dd>{{num.loops}}</dd>
 
         <dt>Total number of loop instances</dt>
@@ -35,6 +36,7 @@
         <dt>Input</dt>
         <dd class="monospace">{{query_info.parsed_input|linebreaks}}</dd>
     </dl>
+  </div>
 </div>
 
 {% endblock page_content %}
@@ -43,7 +45,7 @@
 {% block page_specific_js %}
     <script>
     $('#refine').click(function(){
-        window.location.href = '{% url refine query_info.query_id %}';
+        window.location.href = '{% url "refine" query_info.query_id %}';
     });
     </script>
 {% endblock page_specific_js %}
