--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -17,51 +17,12 @@
 <div class="row">
 {% for loop in loops %}
     <div class="span8">
-    <strong>Loop {{ forloop.counter }}</strong>
-    <table class="table table-striped table-condensed table-bordered">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Motif</th>
-          <th>Mean Alignment Score</th>
-          <th>Median Alignment Score</th>
-          <th>Mean Percentile</th>
-          <th>Median Percentile</th>
-          <th>Mean Edit Distance</th>
-          <th>Median Edit Distance</th>
-          <th>Basepair Signature</th>
-          <th>2D Diagram</th>
-        </tr>
-      </thead>
-      <tbody>
-      {% for result in loop %}
-      <tr>
-        <td>{{ forloop.counter }}</td>
-        <td class="hover-link">
-          <input type='radio' name="group" id='s{{ forloop.parentloop.counter }}-{{ forloop.counter }}'
-                 class='jmolInline' data-coord='{{ result.motif_id }}'>
-          <label for='s{{ forloop.parentloop.counter }}-{{ forloop.counter }}'>{{ result.motif_id }}</label>
-          <span class="hover-link-icon">
-            <a href="{{ result.motif_url }}" target="_blank">&rarr;</a>
-          </span>
-        </td>
-        <td>{{ result.meanscore|floatformat:4 }}</td>
-        <td>{{ result.medianscore|floatformat:4 }}</td>
-        <td>{{ result.meanpercentile|floatformat:2 }}</td>
-        <td>{{ result.medianpercentile|floatformat:2 }}</td>
-        <td>{{ result.meaneditdist|floatformat }}</td>
-        <td>{{ result.medianeditdist|floatformat }}</td>
-        <td>{{ result.signature }}</td>
-        <td>
-            <a class="fancybox" rel="gallery" href="{{ result.ssurl }}"
-               title="Loop {{ forloop.parentloop.counter }} - Hit {{ forloop.counter }} - Motif {{ result.motif_id }}">
-                <img class="ss-thumbnail" src="{{ result.ssurl }}"></img>
-            </a>
-        </td>
-      </tr>
-      {% endfor %}
-      </tbody>
-    </table>
+      <h3>Loop {{ forloop.counter }}</h3>
+      {% if num.loop_instances == 1 %}
+        {% include "JAR3Doutput/single_sequence_loop_table.html" %}
+      {% else %}
+        {% include "JAR3Doutput/multi_sequence_loop_table.html" %}
+      {% endif %}
     </div>
 {% endfor %}
 </div>
