--- a/Templates/JAR3Doutput/single_sequence_loop_table.html
+++ b/Templates/JAR3Doutput/single_sequence_loop_table.html
@@ -6,7 +6,6 @@
       <th>Mean Alignment Score</th>
       <th>Mean Percentile</th>
       <th>Mean Edit Distance</th>
-      <th>Basepair Signature</th>
       <th>2D Diagram</th>
     </tr>
   </thead>
@@ -25,7 +24,6 @@
     <td>{{ result.meanscore|floatformat:4 }}</td>
     <td>{{ result.meanpercentile|floatformat:2 }}</td>
     <td>{{ result.meaneditdist|floatformat }}</td>
-    <td>{{ result.signature }}</td>
     <td>
         <a class="fancybox" rel="gallery" href="{{ result.ssurl }}"
            title="Loop {{ forloop.parentloop.counter }} - Hit {{ forloop.counter }} - Motif {{ result.motif_id }}">
@@ -36,3 +34,7 @@
   {% endfor %}
   </tbody>
 </table>
+
+{% comment %}
+  vim: ft=htmldjango
+{% endcomment %}
