--- a/Templates/JAR3Doutput/single_sequence_loop_table.html
+++ b/Templates/JAR3Doutput/single_sequence_loop_table.html
@@ -26,7 +26,7 @@
     </td>
     <td>{{ result.meanscore|floatformat:4 }}</td>
     <td>{{ result.meanpercentile|floatformat:2 }}</td>
-    <td>{{ result.meaneditdist|floatformat }}</td>
+    <td>{{ result.meaneditdist|floatformat|default:"Not Computed" }}</td>
   </tr>
   {% endfor %}
   </tbody>
