Don't use word Mean with one sequence.
Mean doesn't make sense in context so we remove it.

--- a/Templates/JAR3Doutput/single_sequence_loop_table.html
+++ b/Templates/JAR3Doutput/single_sequence_loop_table.html
@@ -3,9 +3,9 @@
     <tr>
       <th>#</th>
       <th>Motif</th>
-      <th>Mean Alignment Score</th>
-      <th>Mean Percentile</th>
-      <th>Mean Edit Distance</th>
+      <th>Alignment Score</th>
+      <th>Percentile</th>
+      <th>Edit Distance</th>
     </tr>
   </thead>
   <tbody>
