Processed is more generic than extracted.
We don't always extract loops, sometimes we just process a given one.

--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -27,7 +27,7 @@
         <dt>Number of sequences</dt>
         <dd>{{num.seq}}</dd>
 
-        <dt>Number of extracted loops</dt>
+        <dt>Number of processed loops</dt>
         <dd>{{num.loops}}</dd>
 
         <dt>Total number of loop instances</dt>
