--- a/Templates/JAR3Doutput/base.html
+++ b/Templates/JAR3Doutput/base.html
@@ -41,7 +41,7 @@
         </div>
 
         <footer>
-            {% block footer %}<p>&copy;&nbsp;BGSU, 2013</p>{% endblock footer %}
+          {% block footer %}<p>&copy;&nbsp;BGSU, {% now "Y" %}</p>{% endblock footer %}
         </footer>
 
     </div> <!-- /container -->
