Use a non table display for loop results.
This display is more similar to the display PDB provides for search results.
This is nicer, works well with more data and doesn't have overlaps unlike the
table display. There is still work to be done for it, but overall this looks
nicer.

--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -114,5 +114,8 @@ table .headerSortUp:after {
     margin-top: 1em;
 }
 .ss-thumbnail {
-    width: 80px;
+    width: 120px;
+}
+.loop-result {
+  margin-bottom: 5px;
 }
