--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -9,8 +9,8 @@
 <span class="addthis_toolbox addthis_default_style pull-right">
 <a href="http://www.addthis.com/bookmark.php?v=250&amp;pubid=ra-4fb19f2d543502ad" class="addthis_button_compact">Share</a>
 </span>
-<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4fb19f2d543502ad"></script>
+<!--<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>-->
+<!--<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4fb19f2d543502ad"></script>-->
 <!-- AddThis Button END -->
 
 {% endblock page_subtitle %}
