--- a/Templates/JAR3Doutput/multi_sequence_loop_table.html
+++ b/Templates/JAR3Doutput/multi_sequence_loop_table.html
@@ -1,3 +1,4 @@
+{% comment %}
 <table class="table table-striped table-condensed table-bordered">
   <thead>
     <tr>
@@ -37,6 +38,77 @@
   {% endfor %}
   </tbody>
 </table>
+{% endcomment %}
+
+{% for result in loop.matches %}
+
+<div class="loop-result row span7">
+  <div class="hover-link">
+    <h4>{{ result.motif_id }}
+      <a class="hover-link-icon" href="{{ result.motif_url }}" target="_blank">&rarr;</a>
+    </h4>
+  </div>
+  <div class="span2">
+    <a class="fancybox" rel="gallery" href="{{ result.ssurl }}"
+       title="Loop {{ forloop.parentloop.counter }} - Hit {{ forloop.counter }} - Motif {{ result.motif_id }}">
+        <img class="ss-thumbnail" src="{{ result.ssurl }}"></img>
+    </a>
+  </div>
+
+  <div class="span4">
+    <span>
+      <strong class="span2">Rank</strong>
+      {{ forloop.counter }}
+    </span>
+  </div>
+
+  <div class="span4">
+    <span>
+      <strong class="span2">Mean Score</strong>
+      {{ result.meanscore|floatformat:4 }}
+    </span>
+  </div>
+
+  <div class="span4">
+    <span>
+      <strong class="span2">Median Score</strong>
+      {{ result.medianscore|floatformat:4 }}
+    </span>
+  </div>
+
+  <div class="span4">
+    <span>
+      <strong class="span2">Mean Percentile</strong>
+      {{ result.meanpercentile|floatformat:2 }}
+    </span>
+  </div>
+
+  <div class="span4">
+    <span>
+      <strong class="span2">Median Percentile</strong>
+      {{ result.medianpercentile|floatformat:2 }}
+    </span>
+  </div>
+
+  {% if result.meaneditdist != None %}
+  <div class="span4">
+    <span>
+      <strong class="span2">Mean Edit Distance</strong>
+      {{ result.meaneditdist|default:0 }}
+    </span>
+  </div>
+
+  <div class="span4">
+    <span>
+      <strong class="span2">Media Edit Distance</strong>
+      {{ result.medianeditdist|default:0 }}
+    </span>
+  </div>
+  {% endif %}
+
+</div>
+
+{% endfor %}
 
 {% comment %}
   vim: ft=htmldjango
