--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -117,5 +117,11 @@ table .headerSortUp:after {
     width: 120px;
 }
 .loop-result {
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-bottom: 10px;
   margin-bottom: 5px;
+}
+.odd-result {
+    background: #EDF3FE;
 }
