--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -122,6 +122,9 @@ table .headerSortUp:after {
   padding-bottom: 10px;
   margin-bottom: 5px;
 }
+.loop-result:hover {
+  background-color: #f5f5f5;
+}
 .odd-result {
-    background: #EDF3FE;
+  background-color: #f9f9f9;
 }
