--- a/templates/results/not_found.html
+++ b/templates/results/not_found.html
@@ -1,4 +1,4 @@
-{% extends "JAR3Doutput/base_result.html" %}
+{% extends "results/base.html" %}
 
 {% block page_subtitle %}
   Query {{ query_id }} not found
