--- a/templates/results/pending.html
+++ b/templates/results/pending.html
@@ -19,6 +19,6 @@
 {% block page_specific_js %}
     {{ block.super }}
     <script>
-        //setTimeout("location.reload(true);", 5000);
+        setTimeout("location.reload(true);", 5000);
     </script>
 {% endblock page_specific_js %}
