--- a/templates/results/multi_sequence.html
+++ b/templates/results/multi_sequence.html
@@ -6,11 +6,18 @@
 <div id="result-{{ forloop.counter }}" class="loop-result odd-result row span7">
 {% endif %}
 
-  <div class="hover-link">
-    <h4>{{ result.motif_id }}
-      <a class="hover-link-icon" href="{{ result.motif_url }}" target="_blank">&rarr;</a>
-    </h4>
+  <div class="hover-link span5">
+    <label class="radio ">
+      <input type="radio" name="group"
+             id="s{{ forloop.parent.counter }}-{{ forloop.counter }}"
+             class="jmolInline"
+             data-coord={{ result.motif_id }}>
+      <h4>{{ result.motif_id }}
+        <a class="hover-link-icon" href="{{ result.motif_url }}" target="_blank">&rarr;</a>
+      </h4>
+   </label>
   </div>
+
   <div class="span2">
     <a class="fancybox" rel="gallery" href="{{ result.ssurl }}"
        title="Loop {{ forloop.parentloop.counter }} - Hit {{ forloop.counter }} - Motif {{ result.motif_id }}">
