--- a/templates/results/multi_sequence.html
+++ b/templates/results/multi_sequence.html
@@ -1,10 +1,3 @@
-<div class="span2">
-  <a class="fancybox" rel="gallery" href="{{ result.ssurl }}"
-     title="Loop {{ forloop.parentloop.counter }} - Hit {{ forloop.counter }} - Motif {{ result.motif_id }}">
-      <img class="ss-thumbnail" src="{{ result.ssurl }}"></img>
-  </a>
-</div>
-
 <div class="span4">
   <span>
     <strong class="span2">Rank</strong>
@@ -50,7 +43,7 @@
 
 <div class="span4">
   <span>
-    <strong class="span2">Media Edit Distance</strong>
+    <strong class="span2">Median Edit Distance</strong>
     <div class="median-edit-distance">{{ result.medianeditdist|default:0 }}</div>
   </span>
 </div>
